[tool.poetry]
name = "repl-nix-padoos-nonplayer-character-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_padoos_nonplayer_character_py"}]

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
